fix: toast hidden behind playerbar

--- a/src/components/Dashboard/PlayerBar/playerbar.scss
+++ b/src/components/Dashboard/PlayerBar/playerbar.scss
@@ -28,7 +28,7 @@
 
   position: absolute;
   inset: auto 0 0 0;
-  z-index: 9999;
+  z-index: 99;
   height: 7rem;
   padding: 1rem;
   background-color: var(--bg);
